[metadata]
name = pyopenxr_examples
version = 0.5
author = Christopher M. Bruns and others
author_email = cmbruns@rotatingpenguin.com
description = Example programs using pyopenxr VR/AR API
url = https://github.com/cmbruns/pyopenxr_examples
project_urls =
    Bug Tracker = https://github.com/cmbruns/pyopenxr_examples/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Multimedia :: Graphics :: 3D Rendering
    Topic :: Scientific/Engineering :: Visualization
    Development Status :: 4 - Beta

[options.entry_points]
console_scripts =
        hello-xr = xr_examples.hello_xr.__main__:main

[options]
install_requires =
    glfw
    numpy
    pyopenxr
    PyOpenGL
    setuptools
package_dir =
    =.
packages = xr_examples
; 3.5 does not support f-strings
python_requires = >=3.6
